# axlib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh
cmake/: FindFreetype2.cmake  FindPng.cmake
dev/sizer/: CMakeLists.txt  main.cpp
example/blank/: CMakeLists.txt  main.cpp
example/example01/: CMakeLists.txt  main.cpp
example/widget/: ButtonText.json  ButtonText.xml  CMakeLists.txt  Info.plist  MainMenu.xib  main.cpp
modules/attribute/: CMakeLists.txt
modules/attribute/example/: attcheck.cc  convert.cc  modify.cc  serial.cc
modules/attribute/include/: Attribute.hpp  AttributeDocument.hpp  AttributeUtil.hpp  Xml.hpp
modules/attribute/resources/: file02.json  file03.json
modules/attribute/source/: Attribute.cpp  AttributeDocument.cpp  AttributeUtil.cpp
modules/attribute/source/Json/: Json.hpp  JsonReader.cpp  JsonWriter.cpp
modules/attribute/source/Json/rapidjson/: allocators.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
modules/attribute/source/Json/rapidjson/error/: en.h  error.h
modules/attribute/source/Json/rapidjson/internal/: biginteger.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
modules/attribute/source/Json/rapidjson/msinttypes/: inttypes.h  stdint.h
modules/attribute/source/Xml/: AttributeXml.hpp  Xml.cpp  Xml.hpp  XmlHelper.cpp  XmlHelper.hpp  XmlWriter.cpp
modules/attribute/source/Xml/rapidxml/: rapidxml.hpp  rapidxml_iterators.hpp  rapidxml_print.hpp  rapidxml_utils.hpp
modules/attribute/test/: main.cpp
modules/core/: CMakeLists.txt
modules/core/core/X11/: axCoreX11.cpp  axCoreX11.h
modules/core/core/android/: axCoreAndroid.cpp  axCoreAndroid.h
modules/core/core/osx/: AppDelegate.h  AppDelegate.mm  CocoaAppDelegate.h  CocoaAppDelegate.mm  CocoaApplication.h  CocoaApplication.mm  CocoaInterface.h  CocoaInterface.mm  CocoaOpenGLView.cpp  CocoaOpenGLView.h  CocoaOpenGLViewObjc.mm  CocoaType.h  CocoaWindow.h  CocoaWindow.mm  CocoaWindowObjc.h  CocoaWindowObjc.mm  axCocoaInterfaceMac.h  axCocoaInterfaceMac.mm  axCoreMac.cpp  axCoreMac.hpp
modules/core/include/: App.hpp  Config.hpp  Core.hpp  CoreFacade.hpp  Frame.hpp  FrameInterface.hpp  KeyboardManager.hpp  MouseManager.hpp  NodeVisitor.hpp  Panel3D.hpp  Widget.hpp  WidgetLoader.hpp  Window.hpp  WindowManager.hpp  WindowTree.hpp  axlib.hpp
modules/core/source/: App.cpp  Core.cpp  CoreFacade.cpp  Frame.cpp  FrameInterface.cpp  KeyboardManager.cpp  MouseManager.cpp  NodeVisitor.cpp  Panel3D.cpp  Widget.cpp  WidgetLoader.cpp  Window.cpp  WindowManager.cpp  WindowTree.cpp
modules/event/: CMakeLists.txt
modules/event/include/: Event.hpp  EventManager.hpp  Msg.hpp  Object.hpp  Timer.hpp
modules/event/source/: EventManager.cpp  Msg.cpp  Object.cpp  Timer.cpp
modules/graphic/: CMakeLists.txt
modules/graphic/include/: Font.hpp  FrameBuffer.hpp  GC.hpp  GraphicInterface.hpp  Image.hpp  Render.hpp  RenderMath.hpp  Shader.hpp
modules/graphic/include/rndr/: Context.hpp  Engine.hpp  GL.hpp  Matrix4x4.hpp  Vector4.hpp  shader.h
modules/graphic/source/: Font.cpp  FrameBuffer.cpp  GC.cpp  GraphicInterface.cpp  Image.cpp  RenderMath.cpp  Shader.cpp
modules/graphic/source/rndr/: Context.cpp  Engine.cpp  shader.cpp
modules/math/: CMakeLists.txt
modules/math/include/: Interpole.hpp  Math.hpp  Point2D.hpp  Range2D.hpp  Rect2D.hpp  Size2D.hpp
modules/math/source/: Point2D.cpp  Range2D.cpp  Rect2D.cpp  Size2D.cpp
modules/os/: CMakeLists.txt
modules/os/include/: Exec.hpp  FileSystem.hpp  Plugin.hpp  Terminal.hpp
modules/os/source/: Exec.cpp  FileSystem.cpp  Plugin.cpp  Terminal.cpp
modules/util/: CMakeLists.txt
modules/util/include/: Clamp.hpp  Color.hpp  Component.hpp  ConsolePrint.hpp  Control.hpp  Direction.hpp  Flag.hpp  Interpole.hpp  Memory.hpp  Point2D.hpp  Property.hpp  Range2D.hpp  Rect2D.hpp  ResourceStorage.hpp  Size2D.hpp  Util.hpp  Var.hpp  axString.hpp
modules/util/source/: Clamp.cpp  Color.cpp  ConsolePrint.cpp  Flag.cpp  Point2D.cpp  Property.cpp  Range2D.cpp  Rect2D.cpp  ResourceStorage.cpp  Size2D.cpp  Var.cpp  axString.cpp
modules/widget/: CMakeLists.txt
modules/widget/include/: Button.hpp  ColorPicker.hpp  DropMenu.hpp  Knob.hpp  Label.hpp  NumberBox.hpp  NumberScroll.hpp  Panel.hpp  Radio.hpp  ScrollBar.hpp  Slider.hpp  Sprite.hpp  StaticImage.hpp  TextBox.hpp  TextControl.hpp  Toggle.hpp  WidgetSelector.hpp
modules/widget/source/: Button.cpp  ColorPicker.cpp  DropMenu.cpp  Knob.cpp  Label.cpp  NumberBox.cpp  NumberScroll.cpp  Panel.cpp  Radio.cpp  ScrollBar.cpp  Slider.cpp  Sprite.cpp  StaticImage.cpp  TextBox.cpp  TextControl.cpp  Toggle.cpp  WidgetSelector.cpp
